tests/NormalTests/paczka1/fuzzy1/44573089.err
Error in line 21: Paf6 S511 91,6
Error in line 23: 57G9vbA S511 143,6
